# server_backup_assistant

./: !debug_service.bat  !install_and_run_service.bat  !stop_and_remove_service.bat  .gitignore  HELP.txt  Makefile  README.md  copy-app-to-common-folder.py  create-gui-versionfile.py  create-versionfile-to-app-dir.py  main-gui.py  main-win-service.py  pyproject.toml
services_common/: common_logger.py  common_services.py  common_settings.py  db_connector.py  dto.py  get_decision_for_write_settings.py  get_settings_and_check_it_for_changes.py  get_settings_from_server.py  http_statuses.py  inprove_tz_for_py_installer.py  program_log.py  read_settings.py  server_endpoint.py  write_settings_to_db.py
services_gui/: check_windows_service.py  get_default_server_url.py  gui_logger.py  gui_process.py  server_authorization.py
services_win_service/: folder_scanner.py  send_backup_data_to_server.py  send_backup_tsm_log_data_to_server.py  send_precision_to_server.py  send_stat_data_to_server.py  server_assistant_worker.py  server_stat_assistant.py  service_logger.py
